# cmake_learning

./: CMakeLists.txt  README.md  main.cpp
src/: adder.cpp  main.cpp
